--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: white;
+    background-image: linear-gradient(to bottom right, blue, orange);
 }
 
 .accomplishments-list {
@@ -14,6 +14,15 @@ body {
 .projects {
     background-color: magenta;
     border: 2px solid black;
+    border-radius: 10px;
+}
+
+.projects:hover {
+    background-color: yellow;
+}
+
+.buttonClicked {
+    font-size: 2em;
 }
 
 .content {
@@ -36,4 +45,12 @@ body {
 
 .header-title {
     color: white;
+}
+
+#disappear {
+    background-color: pink;
+}
+
+.disappearClick {
+    display: none;
 }
